--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
   "name": "streaming-plats-api",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "description": "A streaming platforms api",
-  "main": "index.ts",
+  "main": "src/index.ts",
+  "module": "dist/index.esm.js",
+  "types": "dist/types/index.d.ts",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "bundle": "rollup -c rollup.config.js"
+    "bundle": "rollup -c --bundleConfigAsCjs",
+    "test": "jest"
   },
   "keywords": ["streaming"],
   "author": "Rodolfo Vieira",
   "license": "ISC",
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/jest": "^24.9.1",
+    "jest": "^29.7.0",
     "rollup": "^4.13.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
     "typescript": "^5.4.2"
   }
